# .github

./: .coderabbit.yaml  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  SUPPORT.md  VERSION_SUPPORT_POLICY.md  cspell.config.yml  go.mod  main.py
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  commit-check.toml  dependabot.yml  labeler.yml  release-drafter.yml  stale.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci-check.yml  codacy.yml  codeql-analysis.yml  codeql.yml  coverage.yml  labeler.yml  main.yml  mkdocs.yml  pr-labeler.yml  pre-commit.yml  publish-pypi.yml  py-coverage.yml  py-publish.yml  release-drafter.yml  snyk-container.yml  sphinx.yml  stale.yml  tag-release.nu  tag-release.yml  test-cpp-linter-action.yml  unreleased-summary.yml
branding/: README.md  brand_logo.xcf  sketched_logo.xcf
profile/: README.md
testing/: README.md  pyproject.toml
