[build-system]
requires = ["setuptools>=61", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "dummy"
description = "dummy "
keywords = ["dummy", ".github", "reusable", "workflows"]
license = {text = "MIT License"}
authors = [
    { name = "Peter Shen", email = "xianpeng.shen@gmail.com" },
]
classifiers = [
    # https://pypi.org/pypi?%3Aaction=list_classifiers
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Build Tools",
]
dynamic = ["version"]
